2006-12-11  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/sizegroup.hg: Added class documentation.

2.10.6:

2006-11-28  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/drawable.hg: create_cairo_context(): Specify true to 
	the Cairo::Context constructor because we have a starting reference. 
	This should prevent a leak an extra reference.
	* gtk/src/printcontext.hg: get_cairo_context():
	* gtk/src/printjob.hg: get_surface(): Pass false to the Cairo constructor, 
	because we do not receive a reference, and do not use refreturn(). Previously 
	we did two references were one was needed.

2.10.5:

2006-11-24  Johannes Schmid <johannes.schmid@openismus.com>

	* gtk/src/uimanager.ccg:
	Fixed a crasher in error handling when exceptions are disabled 

2006-11-24  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: UIManager: Added notes about which 
	parts are human-readable and which parts are just IDs, with a 
	suggestion about what part to mark for translation.

2006-11-23  Nate Nielsen  <nielsen@memberwebs.com>

	* gtk/src/style.ccg:
	* gtk/src/style.hg: lookup_icon_set(): Hand-code this method, 
	so we can copy the result of gtk_style_lookup_icon_set(), 
	because it does not give us a new instance.
	Bug #374094

2006-11-22  Cedric Gustin  <cedric.gustin@gmail.com>

	* configure.in: Do not pkgconfig check gtk+-unix-print-2.0 on
	win32, as gtk+-unix-print-2.0.pc is not always included in GTK+
	installers and/or binary archives (like in Tor's binaries).
	Bug #371882 from Alexis Wilke.

2.10.4:

2006-11-21  Rémi Cardona  <remi2402@free.fr>

	* configure.in:
	* gtk/gtkmm-2.4.pc.in: Define a GTKMM_PC_ATKMM_DEP conditional and 
	use it so that atkmm is only required when it is built, and not 
	when disbaled via --enable-api-atkmm=no.
	Bug #366930 from John N. Laliberte.

2006-11-14  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* gtk/gtkmmconfig.h.in:
	* scripts/reduced.m4: Added --enable-api-maemo-extensions 