@@ -6577,9 +6577,13 @@ refXml-&gt;get_widget_derived(&quot;DialogBasic&quot;, pDialog);
 
 <para>
 Your derived class must have a constructor that takes a pointer to the
-underlying C type (there is a typedef for this), and the
-<classname>Gnome::Glade::Xml</classname> instance. You must call the base
-class's constructor in the initialization list, providing the C pointer.  For
+underlying C type, and the <classname>Gnome::Glade::Xml</classname> instance.
+All relevant classes of &gtkmm; typedef their underlying C type as
+<classname>BaseObjectType</classname> (<classname>Gtk::Dialog</classname>
+typedefs <classname>BaseObjectType</classname> as <type>GtkDialog</type>, for instance).
+</para>
+<para>
+You must call the base class's constructor in the initialization list, providing the C pointer.  For
 instance,
 <programlisting>
 DerivedDialog::DerivedDialog(BaseObjectType* cobject, const Glib::RefPtr&lt;Gnome::Glade::Xml&gt;&amp; refGlade)
