@@ -1,3 +1,9 @@
+2006-12-21  Murray Cumming  <murrayc@murrayc.com>
+
+	* docs/tutorial/gtkmm-tut.xml: libglade with derived widgets: Add more explanation 
+	about the BaseObjectType typedef.
+	Patch from Martin Nordholts in bug #387708.
+
 2006-12-11  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/sizegroup.hg: Added class documentation.
